# park-c-c-sem1

./: README.md
.github/workflows/: c-cpp.yml
iz2/: CMakeLists.txt  configure.sh
iz2/include/: args.h  errors.h  errors_handler.h  io.h  main.h  mean.h  pos.h  pos_array.h
iz2/main/: CMakeLists.txt  main.c
iz2/src/: CMakeLists.txt  args.c  errors.c  errors_handler.c  io.c  naive_mean.c  parallel_mean.c  pos.c  pos_array.c
iz2/tests/: CMakeLists.txt  mean.cpp  parallel.cpp
iz2/tests/stress_tests/: generate_big_file.sh  stress_test.sh
lab1/: CMakeLists.txt  class.h  configure.sh  input.c  input.h  main.c  main.h
lab1/include/: class.h  errors.h  input.h  main.h  pather.h
lab1/main/: CMakeLists.txt  main.c
lab1/src/: CMakeLists.txt  class.c  errors.c  input.c  pather.c
lab1/tests/: CMakeLists.txt  input.cpp  pather.cpp  testlib.cpp
