add_executable(main main.c)
target_include_directories(main PUBLIC ${PROJECT_SOURCE_DIR}/include)

target_compile_features(main PRIVATE c_std_11)

if (USE_PARALLEL)
  target_link_libraries(main PRIVATE pthread)
  target_link_libraries(main PRIVATE parallel_mean)
else()
  target_link_libraries(main PRIVATE naive_mean)
endif()
target_link_libraries(main PRIVATE args)
target_link_libraries(main PRIVATE errors)
target_link_libraries(main PRIVATE pos_array)
target_link_libraries(main PRIVATE pos)
target_link_libraries(main PRIVATE io)
