add_library(naive_mean naive_mean.c)
add_library(pos pos.c)
add_library(args args.c)
add_library(io io.c)
add_library(errors errors_handler.c)

target_include_directories(naive_mean PUBLIC ../include)
target_include_directories(pos PUBLIC ../include)
target_include_directories(args PUBLIC ../include)
target_include_directories(io PUBLIC ../include)
target_include_directories(errors PUBLIC ../include)

target_compile_features(naive_mean PUBLIC cxx_std_11)
target_compile_features(pos PUBLIC cxx_std_11)
target_compile_features(args PUBLIC cxx_std_11)
target_compile_features(io PUBLIC cxx_std_11)
target_compile_features(errors PUBLIC cxx_std_11)
