add_library(parallel_mean parallel_mean.c)
add_library(naive_mean naive_mean.c)
add_library(pos pos.c)
add_library(args args.c)
add_library(io io.c)
add_library(errors errors_handler.c)
add_library(pos_array pos_array.c)

target_include_directories(parallel_mean PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(naive_mean PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(pos PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(pos_array PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(args PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(io PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(errors PUBLIC ${PROJECT_SOURCE_DIR}/include)

target_compile_features(parallel_mean PUBLIC cxx_std_11)
target_compile_features(naive_mean PUBLIC cxx_std_11)
target_compile_features(pos PUBLIC cxx_std_11)
target_compile_features(pos_array PUBLIC cxx_std_11)
target_compile_features(args PUBLIC cxx_std_11)
target_compile_features(io PUBLIC cxx_std_11)
target_compile_features(errors PUBLIC cxx_std_11)
